--- a/cainteoir/formats/rfc2387.md
+++ b/cainteoir/formats/rfc2387.md
@@ -5,7 +5,7 @@ _license_: "CC-BY-SA 3.0"
 description: RFC 2387 support.
 keywords: rfc2387
 title: 2387
-parent: /cainteoir/formats/rfc.html
+parent: /cainteoir/formats/mime.html
 type: spec
 references:
   - rfc2387.ref
