--- a/cainteoir/formats/rfc2557.md
+++ b/cainteoir/formats/rfc2557.md
@@ -5,7 +5,7 @@ _license_: "CC-BY-SA 3.0"
 description: RFC 2557 support.
 keywords: rfc2557
 title: 2557
-parent: /cainteoir/formats/rfc.html
+parent: /cainteoir/formats/mime.html
 type: spec
 references:
   - rfc2557.ref
