Re-add the RFC page so that RFC standards are marked as 'RFC nnnn' instead of 'MIME nnnn'.

--- a/cainteoir/formats/rfc822.md
+++ b/cainteoir/formats/rfc822.md
@@ -5,7 +5,7 @@ _license_: "CC-BY-SA 3.0"
 description: RFC 822 support.
 keywords: rfc, rfc822
 title: 822
-parent: /cainteoir/formats/mime.html
+parent: /cainteoir/formats/rfc.html
 type: spec
 references:
   - rfc822.ref
