--- a/cainteoir/formats/rfc1521.md
+++ b/cainteoir/formats/rfc1521.md
@@ -5,7 +5,7 @@ _license_: "CC-BY-SA 3.0"
 description: RFC 1521 support.
 keywords: rfc, rfc1521
 title: 1521
-parent: /cainteoir/formats/mime.html
+parent: /cainteoir/formats/rfc.html
 type: spec
 references:
   - rfc1521.ref
