redirect old klatt releases

--- a/_posts/2011-09-27-klatt-3.05.md
+++ b/_posts/2011-09-27-klatt-3.05.md
@@ -8,6 +8,8 @@ keywords: text to speech, tts, klatt
 category: release
 project: Klatt
 parent: /klatt.html
+alias:
+  - "/cainteoir/release/2011/09/27/klatt-3.05.html"
 rdf: ['rdfxml']
 ---
 
