--- a/_posts/2011-09-27-klatt-3.05.md
+++ b/_posts/2011-09-27-klatt-3.05.md
@@ -9,7 +9,7 @@ category: release
 project: Klatt
 parent: /klatt.html
 alias:
-  - "/cainteoir/release/2011/09/27/klatt-3.05.html"
+  - "/cainteoir/release/2011/09/27/klatt-3.05"
 rdf: ['rdfxml']
 ---
 
